WP-19: add local retrieval checkpoint
